--- a/index.html
+++ b/index.html
@@ -819,6 +819,7 @@
         <span class="skill-tag">Hindi</span>
         <span class="skill-tag">English</span>
       </div>
+      <a class="libutton" href="https://www.linkedin.com/comm/mynetwork/discovery-see-all?usecase=PEOPLE_FOLLOWS&followMember=md-shafaque-37973b280" target="_blank">Follow on LinkedIn</a>
     </section>
 
     <div class="main-content">
